--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <meta name="author" content="Usina dos Bags">
   <meta name="description" content="Usina dos Bags - Preço e qualidade, quem usa sabe!">
-  <meta name="keywords" content="bigbags, big, bags, usina, dos, bags, bag, evolution, carga, pesada">
-  <meta charset="utf-8">
+  <meta name="keywords" content="bigbags, big, bags, usina, dos, bags, bag, evolution, carga, pesada, sacaria, big bag novos, big bag usados, entulho, reciclagem, big bag pronta entrega">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-language" content="pt-br">
+  <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html" charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Usina dos Bags</title>
 </head>
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/983844033/?value=1.00&amp;label=68LHCI_13AQQwYmR1QM&amp;guid=ON&amp;script=0" />
+    </div>
+    Você precisa habilitar o <b>JavaScript</b> para conseguir visualizar essa página.
   </noscript>
   <div id="root"></div>
+  <!-- Google Code for CONTATOS ON LINE Conversion Page -->
+  <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 983844033;
+    var google_conversion_label = "68LHCI_13AQQwYmR1QM";
+    var google_conversion_value = 1.00;
+    var google_remarketing_only = false;
+    /* ]]> */
+  </script>
+  <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"></script>
 </body>
 </html>
