--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html" charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="manifest" href="manifest.json" />
   <title>Usina dos Bags</title>
 </head>
 <body>
